--- a/Website/Website style.css
+++ b/Website/Website style.css
@@ -30,30 +30,6 @@ max-width: 50%;
 }
 }
 
-.Grid-Container{
-    display: flex;
-    justify-content: center;
-    flex-direction: column-reverse;
-}
-.Grid-Container {
-    color: blue;
-}
-.Grid-Container:hover{
-    color: blueviolet;
-}
-.Grid2-container{
-    display: grid;
-    column-gap: 20px;
-    row-gap: 20px;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto auto auto auto auto;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    border: 1px solid black
-}
-.Grid2-item{
-    border: 1px solid black;
-}
 
 .Homepage{
     background-image: url("Media/0k6meqvps4h91.gif");
@@ -63,10 +39,9 @@ max-width: 50%;
 }
 
 .ContactInfo{
-    background-image: url("Media/di443oa-6e3881d9-cf19-4614-b5dc-3f5f30e6a716.gif");
+    background-image: url("Media/Techmage.gif");
     background-size: cover;
-    background-color: #d20065;
-    color: #8a0000;
+    color: #fff;
 }
 
 .Author{
